index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             font-family: 'Arial', sans-serif;
             overflow: hidden;
             background-color: #1a1a1a;
-            color: white;
+            color: #242323;
         }
         #particles-js {
             position: absolute;
