index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               }
             },
             "color": {
-              "value": "#ffffff"
+              "value": "#242323"
             },
             "shape": {
               "type": "circle",
