index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             margin: 0;
             font-family: 'Arial', sans-serif;
             overflow: hidden;
-            background-color: #1a1a1a;
-            color: #242323;
+            background-color: #242323;
+            color: white;
         }
         #particles-js {
             position: absolute;
