index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             margin: 0;
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Press Start 2P';
             overflow: hidden;
             background-color: #242323;
             color: white;
@@ -81,7 +81,7 @@
               }
             },
             "color": {
-              "value": "#242323"
+              "value": "#ffffff"
             },
             "shape": {
               "type": "circle",
