--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             margin: 0;
             font-family: 'Press Start 2P';
             overflow: hidden;
-            background-color: #242323;
-            color: white;
+            background-color: #121212;
+            color: #ffffff;
         }
         #particles-js {
             position: absolute;
@@ -26,22 +26,22 @@
             align-items: center;
             height: 100vh;
             text-align: center;
-            background-color: rgba(255, 255, 255, 0.9);
+            background-color: rgba(50, 50, 50, 0.9);
             padding: 20px;
             border-radius: 15px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
         .about {
             font-size: 18px;
             margin-bottom: 20px;
-            color: #333;
+            color: #ffffff;
         }
         .skills {
             list-style: none;
             padding: 0;
             margin: 0;
             font-size: 18px;
-            color: #333;
+            color: #ffffff;
         }
         .skills li {
             margin: 10px 0;
@@ -49,7 +49,7 @@
         .extra {
             margin-top: 20px;
             font-size: 16px;
-            color: #333;
+            color: #ffffff;
         }
     </style>
 </head>
