--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         }
         .container {
             display: flex;
+            margin-top: 10px;
+            margin-bottom: 10px;
             flex-direction: column;
             justify-content: center;
             align-items: center;
