index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -59,15 +59,18 @@
     <div id="particles-js"></div>
     <div class="container">
         <div class="about">
-            <p>Hallo! Ich bin [Dein Name]. Willkommen auf meiner persönlichen Website!</p>
+            <p>Hello👋, im Silal. A developer from Germany.</p>
         </div>
         <ul class="skills">
-            <li>💻 Programmierung</li>
-            <li>🎨 Grafikdesign</li>
-            <li>📊 Datenanalyse</li>
+            <li>☕️ Java</li>
+            <li>🐥 JavaScript</li>
+            <li>⭐️ Html/Css (not very good)</li>
         </ul>
         <div class="extra">
-            <p>Hier kannst du noch mehr über mich erfahren...</p>
+            <p>Ich arbeite im Moment an verschiedensten Projekten.</p>
+            <ul class="skills">
+                <li>🌾 <a herf="https://github.io/coremcminecraft">Coremc minecraft Nettwerk</a></li>
+        </ul>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
