index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             <li>⭐️ Html/Css (not very good)</li>
         </ul>
         <div class="extra">
-            <p>Ich arbeite im Moment an verschiedensten Projekten.</p>
-            <ul class="skills">
-                <li>🌾 <a herf="https://github.io/coremcminecraft">Coremc minecraft Nettwerk</a></li>
-        </ul>
+            <p>At the moment im working on many different projekts..</p>
         </div>
+        <ul class="skills">
+            <li>🌾 <a herf="https://github.io/coremcminecraft">Coremc minecraft Network</a></li>
+        </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
     <script>
