index.html aktualisieren

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -18,6 +18,7 @@
     <style>
         body {
             background-color: #121212;
+            color: #ffffff;
         }
     </style>
 </head>
