index.html aktualisieren

--- a/coremc/discord/index.html
+++ b/coremc/discord/index.html
@@ -5,7 +5,7 @@
     <title>Coremc - Discord</title>
     
     <meta content="Coremc Discord" property="og:title" />
-    <meta content="⭐️Trete jetzt dem Core c Discor Server bei!" property="og:description" />
+    <meta content="⭐️Trete jetzt dem Coremc Discor Server bei!" property="og:description" />
     <meta content="https://silal123.github.io/coremc/discord" property="og:url" />
     <meta content="https://silal123.github.io/content/coremc/logo.png" property="og:image" />
     <meta content="#00b959" data-react-helmet="true" name="theme-color" />
