--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+
+    <meta content="Silal" property="og:title" />
+    <meta content="🐥Find out interesting facts, skills and more about me!" property="og:description" />
+    <meta content="https://silal123.github.io/" property="og:url" />
+    <meta content="https://silal123.github.io/content/silal/logo.png" property="og:image" />
+    <meta content="#2AB40A" data-react-helmet="true" name="theme-color" />
+    
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         body {
