--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Silal - About Me</title>
+    <link rel="icon" type="image/x-icon" href="/content/silal/logo.png">
 
     <meta content="Silal" property="og:title" />
     <meta content="🐥Find out interesting facts, skills and more about me!" property="og:description" />
-    <meta content="https://silal123.github.io/" property="og:url" />
-    <meta content="https://silal123.github.io/content/silal/logo.png" property="og:image" />
+    <meta content="https://silal.dev/" property="og:url" />
+    <meta content="https://silal.dev/content/silal/logo.png" property="og:image" />
     <meta content="#2AB40A" data-react-helmet="true" name="theme-color" />
     
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
