added Coremc open in new tab

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>At the moment im working on many different projekts:</p>
       </div>
       <ul class="skills">
-        <li>🌾 <a href="https://github.com/coremcminecraft">Coremc minecraft Network</a></li>
+        <li>🌾 <a href="https://github.com/coremcminecraft" target="_blank">Coremc minecraft Network</a></li>
         <li>🧠 <a href="https://silal.dev">This Website</a></li>
       </ul>
     </div>
